added custom notifications for driver install

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -30,7 +30,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 //
 
 MAIN_DIALOG DIALOGEX 0, 0, 407, 365
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
@@ -66,7 +66,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMEN
 CAPTION "About Zadig"
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    ICON            128,IDC_STATIC,14,14,20,20
+    ICON            IDI_ICON1,IDC_ABOUT_ICON,10,21,21,20
     LTEXT           "Zadig, Version 1.0",IDC_STATIC,42,14,114,8,SS_NOPREFIX
     LTEXT           "Copyright (c) 2010 Pete Batard",IDC_STATIC,41,40,114,8
     DEFPUSHBUTTON   "OK",IDOK,167,72,50,14,WS_GROUP
@@ -121,7 +121,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
+GUIDELINES DESIGNINFO
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
@@ -156,12 +156,24 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_EIRE
 //
 
 IDD_PROGRESS DIALOGEX 0, 0, 187, 36
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_THICKFRAME
 CAPTION "Zadig"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",PBS_MARQUEE | WS_BORDER,7,20,173,8
     LTEXT           "Installing driver...",IDC_STATIC,8,7,171,8
+END
+
+IDD_NOTIFICATION DIALOGEX 0, 0, 263, 63
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_THICKFRAME
+CAPTION "Zadig"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "",IDC_NOTIFICATION_LINE,0,0,263,39
+    CONTROL         "",IDC_STATIC,"Static",SS_WHITERECT,0,0,263,38
+    ICON            32516,IDC_NOTIFICATION_ICON,6,6,20,20
+    LTEXT           "",IDC_NOTIFICATION_TEXT,35,10,219,20
+    PUSHBUTTON      "Close",IDC_NOTIFICATION_CLOSE,211,44,43,14
 END
 
 
@@ -171,7 +183,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
+GUIDELINES DESIGNINFO
 BEGIN
     IDD_PROGRESS, DIALOG
     BEGIN
@@ -190,12 +202,12 @@ END
 // TEXTINCLUDE
 //
 
-1 TEXTINCLUDE 
+1 TEXTINCLUDE
 BEGIN
     "resource.h\0"
 END
 
-2 TEXTINCLUDE 
+2 TEXTINCLUDE
 BEGIN
     "#include ""afxres.h""\r\n"
     "#ifndef PBS_MARQUEE\r\n"
@@ -204,7 +216,7 @@ BEGIN
     "\0"
 END
 
-3 TEXTINCLUDE 
+3 TEXTINCLUDE
 BEGIN
     "\r\n"
     "// Must reference a manifest for visual styles and elevation\r\n"
@@ -232,7 +244,7 @@ IDI_ICON1               ICON                    "icon1.ico"
 // Menu
 //
 
-IDR_MENU1 MENU 
+IDR_MENU1 MENU
 BEGIN
     POPUP "Device"
     BEGIN
