--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -9,7 +9,7 @@ advanced_mode = true;
 extract_only = false;
 
 // List only devices that don't have a driver (default = true)
-list_driverless = false;
+list_all = true;
 
 // Trim trialing whitespaces from the USB device description (default = false)
 trim_whitespaces = true;
@@ -18,5 +18,5 @@ trim_whitespaces = true;
 // WinUSB = 0, libusb0.sys = 1, Custom = 2 (default = WinUSB)
 default_driver = 0;
 
-// Set the default destination directory for extraction of the driver files
+// Set the default destination directory for extraction of the driver files (default = "C:\\usb_driver")
 default_dir = "C:\\test";
