--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -77,11 +77,11 @@ END
 
 IDD_PROGRESS DIALOGEX 0, 0, 187, 36
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_THICKFRAME
-CAPTION "Zadig"
+CAPTION "Installing driver..."
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",PBS_MARQUEE | WS_BORDER,7,20,173,8
-    LTEXT           "Installing driver...",IDC_STATIC,8,7,171,8
+    LTEXT           "Installing driver...",IDC_PROGRESS_TEXT,8,7,171,8
 END
 
 IDD_NOTIFICATION DIALOGEX 0, 0, 263, 63
