added option to list hubs and composite parents (zadig)

--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -8,10 +8,13 @@ advanced_mode = true;
 // Extract driver files only, don't install (default = false)
 extract_only = false;
 
-// List only devices that don't have a driver (default = true)
+// List all devices, including the ones that don't have a driver (default = false)
 list_all = true;
 
-// Trim trialing whitespaces from the USB device description (default = false)
+// Include hubs and composite parent devices when listing all (default = false)
+include_hubs = true;
+
+// Trim trailing whitespaces from the USB device description (default = false)
 trim_whitespaces = true;
 
 // Select the following as the default driver to install:
@@ -19,4 +22,4 @@ trim_whitespaces = true;
 default_driver = 0;
 
 // Set the default destination directory for extraction of the driver files (default = "C:\\usb_driver")
-default_dir = "C:\\test";
+default_dir = "C:\\usb_driver";
