--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -42,13 +42,13 @@ BEGIN
     EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     LTEXT           "Vendor ID:",IDC_STATIC,21,43,36,8
     LTEXT           "Product ID:",IDC_STATIC,91,43,38,8
-    EDITTEXT        IDC_DRIVER,279,41,64,14,ES_READONLY | NOT WS_TABSTOP
-    LTEXT           "Current Driver:",IDC_STATIC_DRIVER,228,43,50,8
+    EDITTEXT        IDC_DRIVER,279,41,64,14,ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP
+    LTEXT           "Current Driver:",IDC_STATIC_DRIVER,228,43,50,8,NOT WS_VISIBLE
     PUSHBUTTON      "Install Driver",IDC_INSTALL,152,112,103,29
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,23,47,10
     EDITTEXT        IDC_FOLDER,163,81,180,14,ES_AUTOHSCROLL
-    LTEXT           "Interface ID:",IDC_STATIC_MI,162,43,43,8
-    EDITTEXT        IDC_MI,207,41,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    LTEXT           "Interface ID:",IDC_STATIC_MI,162,43,43,8,NOT WS_VISIBLE
+    EDITTEXT        IDC_MI,207,41,17,14,ES_UPPERCASE | ES_READONLY | NOT WS_VISIBLE | NOT WS_TABSTOP
     PUSHBUTTON      "Browse...",IDC_BROWSE,347,81,39,14
     COMBOBOX        IDC_DEVICELIST,20,21,323,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     EDITTEXT        IDC_INFO,13,158,376,160,ES_MULTILINE | ES_READONLY | WS_VSCROLL
@@ -143,7 +143,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO
+GUIDELINES DESIGNINFO 
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
@@ -186,12 +186,12 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_EIRE
 // TEXTINCLUDE
 //
 
-1 TEXTINCLUDE
+1 TEXTINCLUDE 
 BEGIN
     "resource.h\0"
 END
 
-2 TEXTINCLUDE
+2 TEXTINCLUDE 
 BEGIN
     "#include ""afxres.h""\r\n"
     "#ifndef PBS_MARQUEE\r\n"
@@ -200,7 +200,7 @@ BEGIN
     "\0"
 END
 
-3 TEXTINCLUDE
+3 TEXTINCLUDE 
 BEGIN
     "\r\n"
     "// Must reference a manifest for visual styles and elevation\r\n"
@@ -228,7 +228,7 @@ IDI_ICON1               ICON                    "icon1.ico"
 // Menu
 //
 
-IDR_MENU1 MENU
+IDR_MENU1 MENU 
 BEGIN
     POPUP "Device"
     BEGIN
@@ -237,8 +237,9 @@ BEGIN
     END
     POPUP "Options"
     BEGIN
-        MENUITEM "List Only Driverless Devices", IDM_DRIVERLESSONLY
-        MENUITEM "Extract files only",          IDM_EXTRACT
+        MENUITEM "List All Devices",            IDM_LISTALL
+        MENUITEM "Ignore Hubs or Composite Parents", IDM_IGNOREHUBS, CHECKED, INACTIVE
+        MENUITEM "Extract Files Only (Don't Install)", IDM_EXTRACT
         MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE
     END
     POPUP "Help"
