--- a/examples/zadig_2008.vcproj
+++ b/examples/zadig_2008.vcproj
@@ -338,6 +338,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\usb_vendors.c"
+				>
+			</File>
+			<File
 				RelativePath=".\zadig.c"
 				>
 			</File>
@@ -357,6 +361,10 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\usb_vendors.h"
 				>
 			</File>
 			<File
