--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -284,6 +284,10 @@
 				RelativePath=".\logging.c"
 				>
 			</File>
+			<File
+				RelativePath=".\vid_data.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
