populate inf version/date from embedded libusb0/winusb data

--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -26,6 +26,7 @@ installer_x64_LDADD = -lsetupapi -lnewdev
 endif
 
 embedder_SOURCES = embedder.h embedder_files.h embedder.c
+embedder_LDADD = -lversion
 
 EXTRA_DIST = $(LIB_SRC)
 
