--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -312,6 +312,10 @@
 				RelativePath=".\logging.c"
 				>
 			</File>
+			<File
+				RelativePath=".\vid_data.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
