--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\tokenizer.c"
+				>
+			</File>
+			<File
 				RelativePath=".\vid_data.c"
 				>
 			</File>
@@ -299,10 +303,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\infs.h"
-				>
-			</File>
-			<File
 				RelativePath=".\installer.h"
 				>
 			</File>
@@ -312,6 +312,22 @@
 			</File>
 			<File
 				RelativePath=".\logging.h"
+				>
+			</File>
+			<File
+				RelativePath=".\tokenizer.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			>
+			<File
+				RelativePath=".\libusb-win32.inf.in"
+				>
+			</File>
+			<File
+				RelativePath=".\winusb.inf.in"
 				>
 			</File>
 		</Filter>
