--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -92,7 +92,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -153,7 +153,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -217,7 +217,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
