move progress bar into libwdi, part 1
also updated versioning in libwdi.rc

--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -309,6 +309,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwdi_dlg.c"
+				>
+			</File>
+			<File
 				RelativePath=".\logging.c"
 				>
 			</File>
@@ -340,6 +344,10 @@
 			</File>
 			<File
 				RelativePath=".\logging.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
