--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -281,6 +281,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwdi_dlg.c"
+				>
+			</File>
+			<File
 				RelativePath=".\logging.c"
 				>
 			</File>
@@ -312,6 +316,10 @@
 			</File>
 			<File
 				RelativePath=".\logging.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
