add manifest to zadic & zadig Visual Studio tree

--- a/examples/zadic_2008.vcproj
+++ b/examples/zadic_2008.vcproj
@@ -347,6 +347,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Resource Files"
+			>
+			<File
+				RelativePath=".\zadic.manifest"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
