--- a/examples/zadig_2008.vcproj
+++ b/examples/zadig_2008.vcproj
@@ -374,6 +374,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\zadig.manifest"
+				>
+			</File>
+			<File
 				RelativePath=".\zadig.rc"
 				>
 			</File>
