added log level selection in zadig + added WDI_ prefix to log levels
also fixed "successfully created *.cat" issue

--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -5,6 +5,9 @@
 // Start application in advanced mode (default = false)
 advanced_mode = true;
 
+// Log level (0=debug, 1=info, 2=warning, 3=error)
+log_level = 0;
+
 // Extract driver files only, don't install (default = false)
 extract_only = false;
 
