--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -319,6 +319,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\msapi_utf8.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
