UTF-8 overhaul, part 2: installer
also other msapi_utf8 fixes

--- a/libwdi/installer_x64_2008.vcproj
+++ b/libwdi/installer_x64_2008.vcproj
@@ -192,6 +192,10 @@
 				RelativePath="installer.h"
 				>
 			</File>
+			<File
+				RelativePath=".\msapi_utf8.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
