--- a/libwdi/installer_x86_2008.vcproj
+++ b/libwdi/installer_x86_2008.vcproj
@@ -190,6 +190,10 @@
 				RelativePath="installer.h"
 				>
 			</File>
+			<File
+				RelativePath=".\msapi_utf8.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
