brought zadic buildout in line with zadig one

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,11 +4,14 @@ INCLUDES = -I$(top_srcdir)
 
 noinst_PROGRAMS = zadic zadig
 
+zadic_rc.o: zadic.rc resource.h
+	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
+
 zadic_SOURCES = zadic.c
 zadic_CFLAGS = $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
 # static ensures that the exe can be shared as a standalone, and still allow driver installation
 zadic_LDFLAGS = $(NO_CYGWIN) $(AM_LDFLAGS) -static
-zadic_LDADD = -L../libwdi/.libs -lwdi
+zadic_LDADD = zadic_rc.o -L../libwdi/.libs -lwdi
 
 zadig_rc.o: zadig.rc resource.h
 	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
