newer MinGW-w64 have newdev.h in include rather than include/ddk
* added detection in configure.ac as MinGW32 and multilib MinGW-w64 might use different locations
* config.h must now be refrenced is msapi_utf8.h as a result (and path to config.h must be added)

--- a/libwdi/installer_x86_2008.vcproj
+++ b/libwdi/installer_x86_2008.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="..\msvc"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				RuntimeLibrary="3"
@@ -114,7 +114,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="1"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="..\msvc"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				WarningLevel="3"
