--- a/libwdi/installer_x64_2008.vcproj
+++ b/libwdi/installer_x64_2008.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="..\msvc"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS; _WIN64"
 				RuntimeLibrary="3"
 				WarningLevel="3"
@@ -115,7 +115,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="1"
-				AdditionalIncludeDirectories=""
+				AdditionalIncludeDirectories="..\msvc"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS; _WIN64"
 				RuntimeLibrary="2"
 				WarningLevel="3"
